--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	<title>Hector Duarte</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="estilos.css">
+		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 		<link rel="stylesheet" type="text/css" href="css/unslider.css">
+		<link rel="shortcut icon" href="22.ico">
 </head>
 
-<body background="fondo-2.jpg">
+<body background="images/fondo-2.jpg">
 
     <div id="contenedor-2">
-				<img src="imagen.jpg" style="border-radius: 15px" width="275x">
+				<img src="images/imagen.jpg" style="border-radius: 15px" width="275x">
 
 			<ul>
 					<li class="contenedor">
@@ -32,24 +33,32 @@
 	 <div id="estilo" class="bloque-1">
 		 <h3>Quien Soy</h3>
 		 <h1>Hector Duarte</h1>
-		 <h4 id="destacado">Front-end jr.</h4>
+		 <h4>Front-end jr.</h4>
 		 <ul>
 			 <li>Nombre: Hector Duarte </li>
 			 <li>Edad: 19 </li>
 			 <li>Email:hectorduarte240.hd@gamil.com</li>
 			 <li>Telefono:1124718183</li>
 		 </ul>
-		 <p id="destacado">Me gusta aprender cosas nuevas, soy proactivo, responsable, inteligente y muy analítico. Cuento con conocimientos básicos de HTML y CSS.. Además, tengo facilidad para el trabajo en equipo, y adaptación rápida al ambiente laboral. Soy de las personas que pueden dar su 100% bajo presión; y estoy seguro que podré superar sus expectativas.</p>
+		 <p>Me gusta aprender cosas nuevas, soy proactivo, responsable, inteligente y muy analítico. Cuento con conocimientos básicos de HTML y CSS.. Además, tengo facilidad para el trabajo en equipo, y adaptación rápida al ambiente laboral. Soy de las personas que pueden dar su 100% bajo presión; y estoy seguro que podré superar sus expectativas.</p>
 	 </div>
-   <div id="formacion" class="bloque-1">
-			<h2>Formacion</h2>
-			<h4 id="destacado">Bachiller Escuela Rumania De Educacion Media N°2- D.E. 17  </h4>
-			<p id="destacado">Estoy cursando la orintacion en Perito Mercantil</p>
+   <div class="bloque-1" id="asd">
+			<h2 >Formacion</h2>
+			 <ul>
+			     <li>Bachiller ESC. DE EDUC. MEDIA Nº 02 RUMANIA DE 17 
+Nº: 2 - D. E.: 17</li>
+			     <li>
+			   Charla De Ingenieria en la UBA
+			     </li>
+			     <li>
+			   Concurso De Aplicaciones Moviles SAP
+			     </li>
+			 </ul>
 	</div>
 
 	<div id="esperiencia" class="bloque-1">
 			<h2>Experiencia</h2>
-			<p id="destacado">Lograr una posición en el área administrativa y operativa en la cual pueda transferir y poner en ejecución mi experiencia y habilidades, desarrollarme profesionalmente para el buen desempeño de las funciones asignadas.</p>
+			<p>Lograr una posición en el área administrativa y operativa en la cual pueda transferir y poner en ejecución mi experiencia y habilidades, desarrollarme profesionalmente para el buen desempeño de las funciones asignadas.</p>
 	</div>
 
 	<div id="portfolio" class="bloque-1">
@@ -59,12 +68,12 @@
 				<ul>
 					<li>
                  <a href="juego.html">
-					<img src="captura-1.png" width="275x"></a>
+					<img src="images/captura-1.png" width="275x"></a>
 					</li>
 
 					<li>
                      <a href="telam.html">
-					<img src="captura-3.png" width="275x">
+					<img src="images/captura-3.png" width="275x">
 					</li>
 
 
