--- a/juego.html
+++ b/juego.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>BMO Arcade</title>
     <link rel="stylesheet" href="css/juego.css">
-
+    <link rel="shortcut icon" href="22.ico">
   </head>
   <body>
 
